# kjarni

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE-Apache-2.0  LICENSE-MIT  PERFORMANCE_TODO.md  README.md  article.txt  cpu.txt  de.translate  english.txt  f.txt  generation.txt  gpu.txt  new.txt  setup_rag.sh  t.py  t5.py  t5.py.txt  t5.txt  test_encoder.py  test_kjarni.py  test_llama.py  torch.txt  tree.txt  zeroshot.py
crates-internal/edgemodels/: Cargo.toml
crates-internal/edgemodels/examples/: bart.rs  bart2.rs  bartsummarize.rs  basic.rs  bert_embedding.rs  cross_encoder.rs  gpt2.rs  gpt222_generation.rs  gpt22_generation.rs  gpt2_generation.rs  gpt_generation.rs  llama.rs  llama_generation.rs  sentence_encoder.rs  seq2seq.rs
crates-internal/edgemodels/src/: generation.rs  generation2.rs  gguf_loader.rs  gptconfig.rs  lib.rs  memory_estimate.rs  tests.rs  tests2.rs
crates-internal/edgemodels/src/bert/: mod.rs
crates-internal/edgemodels/src/cross_encoder/: configs.rs  mod.rs  tests.rs
crates-internal/edgemodels/src/generation/: generator.rs  mod.rs  seq2seq.rs  seq2seq2.rs
crates-internal/edgemodels/src/model/: bertbase.rs  distilgpt2.rs  gptbase.rs  mod.rs
crates-internal/edgemodels/src/models/: mod.rs
crates-internal/edgemodels/src/sentence_encoder/: configs.rs  mod.rs  tests.rs
crates-internal/edgemodels/src/seq2seq/: bart_configs.rs  configs.rs  mod.rs  seq2seq_model.rs  tests.rs
crates-internal/edgemodels/src/tests/: decoder_parity_test.rs  encoder_parity_test.rs  mod.rs  parity_test.rs  torch_parity_test.rs
crates-internal/edgemodels/src/text_generation/: configs.rs  gpt2.rs  llama.rs  llama2.rs  llama_configs.rs  mod.rs
crates-internal/edgerag/: Cargo.toml
crates-internal/edgerag/src/: lib.rs  search_index.rs  splitter.rs  wasm.rs
crates-internal/edgetransformers/: Cargo.toml  file.txt
crates-internal/edgetransformers/src/: activations.rs  adaptive_embeddings.rs  attention.rs  cache.rs  decoder_attention.rs  decoder_cross_attn.rs  decoder_cross_attn_layer.rs  decoder_layer.rs  embeddings.rs  encoder_layer.rs  feedforward.rs  gpu_context.rs  gpu_pipeline.rs  lib.rs  linear_layer.rs  model_load_config.rs  pooling.rs  rms_norm.rs  rope.rs  traits.rs  weights.rs  wgpu_ops.rs
crates-internal/edgetransformers/src/cache/: cpu.rs  cpu_beam.rs  gpu.rs  gpu_beam.rs  mod.rs  tests.rs
crates-internal/edgetransformers/src/common/: sampling.rs
crates-internal/edgetransformers/src/decoder/: cpu.rs  gpu.rs  mod.rs  traits.rs
crates-internal/edgetransformers/src/encoder/: classifier.rs  config.rs  cpu.rs  encoder_self_attention.rs  gpu.rs  mod.rs  traits.rs
crates-internal/edgetransformers/src/encoder_decoder/: beams.rs  cpu.rs  decoder_cross_attn.rs  decoder_self_attn.rs  gpu.rs  mod.rs  traits.rs
crates-internal/edgetransformers/src/feedforward/: legacy.rs  mod.rs  standard.rs  swiglu.rs  tests.rs
crates-internal/edgetransformers/src/gpu_ops/: async_readback.rs  frame_context.rs  kernel.rs  mod.rs  tensor.rs  tensor_pool.rs  uniforms.rs  utils.rs
crates-internal/edgetransformers/src/models/: base.rs  mod.rs  registry.rs
crates-internal/edgetransformers/src/normalization/: layer_norm.rs  mod.rs  rms_norm.rs
crates-internal/edgetransformers/src/tests/: common.rs  llama.rs  mod.rs  test_cpu_llama_layer_parity.rs  weight_loading.rs
crates-internal/edgetransformers/src/utils/: linear_algebra.rs  masks.rs  mod.rs
crates/edgegpt/: Cargo.toml
crates/edgegpt/examples/cpp/: 04_semantic_search.cpp  CMakeLists.txt
crates/edgegpt/include/: edgegpt.cs  edgegpt.h  edgegpt.hpp
crates/edgegpt/src/: cross_encoder_api.rs  edge_gpt.rs  ffi.rs  lib.rs  model_manager.rs  sentence_encoder_api.rs  utils.rs
crates/edgegpt/src/ffi/: c.rs  mod.rs
crates/kjarni/: BUILD.md  CMakeLists.txt  Cargo.toml  config.toml
crates/kjarni-cli/: Cargo.toml  README.md
crates/kjarni-cli/src/: lib.rs  main.rs
crates/kjarni-cli/src/commands/: chat.rs  classify.rs  display.rs  embed.rs  encode.rs  generate.rs  index.rs  mod.rs  model.rs  repl.rs  rerank.rs  search.rs  similarity.rs  summarize.rs  tests.rs  transcribe.rs  translate.rs  util.rs
crates/kjarni-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/kjarni-ffi/bindings/csharp/: Kjarni.sln
crates/kjarni-ffi/bindings/go/: chat.go  classifier.go  embedder.go  ffi.go  lib.go  reranker.go  searcher.go
crates/kjarni-ffi/bindings/python/: __init__.py  f.txt  pyproject.toml
crates/kjarni-ffi/include/: kjarni.h
crates/kjarni-ffi/scripts/: build.sh  miri.sh
crates/kjarni-ffi/src/: callback.rs  chat.rs  classifier.rs  embedder.rs  error.rs  indexer.rs  lib.rs  reranker.rs  searcher.rs
crates/kjarni-models/: Cargo.toml
crates/kjarni-models/examples/: bart.rs  bart2.rs  basic.rs  cross_encoder.rs  gpt2.rs  llama.py  llama.rs  llama2.rs  llama_gen.rs  sentence_encoder.rs  t5_test.rs  test_audio_loading.rs  validate_llama.rs  verify_all_sentence_encoders.rs  verify_sentence_encoder.rs  whisper_test.rs  zero_shot.rs
crates/kjarni-models/src/: lib.rs
crates/kjarni-rag/: Cargo.toml
crates/kjarni-rag/src/: config.rs  index_reader.rs  index_writer.rs  lib.rs  loader.rs  progress.rs  search_index.rs  segment.rs  splitter.rs  tests.rs
crates/kjarni-search/: Cargo.toml
crates/kjarni-search/src/: bm25.rs  hybrid.rs  lib.rs  types.rs
crates/kjarni-transformers/: Cargo.toml
crates/kjarni-transformers/scripts/: quantize.py
crates/kjarni-transformers/src/: activations.rs  attention.rs  embeddings.rs  lib.rs  linear_layer_old.rs  rope.rs  stats.rs  traits.rs  weights_old.rs
crates/kjarni-wasm/: Cargo.toml
crates/kjarni-wasm/examples/: index.html
crates/kjarni-wasm/scripts/: quantize_model.py  wasm-build.sh
crates/kjarni-wasm/src/: kjarni-search.js  lib.rs  tokenizer.rs  wasm_feedforward.rs  wasm_simd.rs  weights.rs
crates/kjarni/src/: classifier.rs  config.rs  config_utils.rs  cross_encoder_api.rs  edge_gpt.rs  encoder.rs  kjarni.rs  kjarni_config.rs  kjarni_config_loader.rs  kjarni_config_resolve.rs  lib.rs  model_manager.rs  registry.rs  sentence_encoder_api.rs  test_encoder.py  utils.rs
(+1334 files in other folders)
