[workspace]
members = [
    "crates/kjarni",
    "crates/kjarni-cli",
    "crates/kjarni-ffi",
    "crates/kjarni-transformers", 
    "crates/kjarni-search",     
    "crates/kjarni-rag", 
    "crates/kjarni-models",      
]

resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["Ólafur Aron Jóhannsson <olafurjohannss@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/olafurjohannsson/edgegpt"
keywords = ["ai", "llm", "transformer", "bert", "gpt"]
categories = ["science", "text-processing"]



[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = { version = "2.2.1", features = ["bytemuck"] }
safetensors = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokenizers = { version = "0.22.1", default-features = false, features = ["onig"] }
once_cell = "1.19"
faer = "0.20"

ndarray = { version = "0.16.1", features = ["rayon", "matrixmultiply-threading"] }

# GPU / Numerics
wgpu = "27.0.1"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive", "extern_crate_alloc"] }
#ndarray = { version = "0.16.1", features = ["rayon", "matrixmultiply-threading"] } # Base features

matrixmultiply = "0.3.10"
# Other shared deps
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
async-trait = "0.1.89"
futures = "0.3.31"
rand = "0.8"
rand_distr = "0.4"
dirs = "5.0"
rayon = "1.10"
futures-intrusive = "0.5.0"
log = "0.4"
ndarray-rand = "0.15.0"
futures-util = "0.3.31"
futures-core = "0.3.0"
async-stream = "0.3.6"
libm = "0.2.0"
gguf-rs = "0.1.4"
memmap2 = "0.9.9"

[profile.release]
opt-level = 3       # Max optimizations
lto = "fat"         # Enable Link Time Optimization (Cross-crate optimization)
codegen-units = 1   # Reduce parallel compilation to allow better optimization
panic = "abort"     # Remove stack unwinding (smaller, slightly faster binaries)
strip = true        # Remove symbols (smaller binary)


