[package]
name = "edgetransformers"
description = "Low-level transformer operations for EdgeGPT"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
half = { workspace = true }
pollster = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokenizers = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
futures-intrusive = { workspace = true }
rand_distr ={ workspace = true}
log = { workspace = true }
ndarray-rand = { workspace = true }
libm = { workspace = true }
[dev-dependencies]
env_logger = "0.10"
