[package]
name = "kjarni-ffi"
version = "0.1.0"
edition = "2024"
description = "C FFI bindings for Kjarni"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
c-bindings = []

[dependencies]
kjarni = { path = "../kjarni" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde_json = "1.0"
num_cpus = "1.16"
rayon = "1.10"
[build-dependencies]
cbindgen = "0.29.2"

[package.metadata.cargo-rpath]
lib-path = "$ORIGIN"