[package]
name = "kjarni-models"
description = "Model implementations for Kjarni"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kjarni-transformers = { path = "../kjarni-transformers" }
kjarni-rag = { path = "../kjarni-rag" }

# Inherit from workspace
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
half = { workspace = true }
pollster = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokenizers = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
ndarray-rand = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
gguf-rs = { workspace = true }
faer = { workspace = true }
lru = "0.12.3"
futures = "0.3.31"
tempfile = "3.23.0"

[dev-dependencies]
env_logger = "0.10"

# Unique deps
